# fastapi-free

./: .gitignore  README.md  pyproject.toml
analysis/: generate_k6_report.py  generate_proof_report.py
app/: main.py
bench/k6/: sync-constant-arrival.js  sync-load.js  sync-smoke.js
bench/vegeta/: run-sync.sh  sync-targets.txt
bench/wrk2/: run-sync.sh
docs/: methodology.md
scripts/: host_native_common.py  k6-docker  run_frontier.py  run_matrix.py  run_parallel_proof.py
telemetry/: docker-compose.yml
telemetry/grafana/dashboards/: fastapi-sync-benchmark.json
telemetry/grafana/provisioning/dashboards/: dashboards.yml
telemetry/prometheus/: prometheus.yml
tests/: test_app.py  test_runners.py
