[project]
name = "fastapi-free-thread-bench"
version = "0.1.0"
description = "FastAPI 0.136.0 benchmark harness for Python 3.14t free-threaded sync endpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn>=0.30,<1",
    "prometheus-client>=0.20,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "pytest>=9.0.3,<10",
]
analysis = [
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
]
otel = [
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
